tests/transpiler/x/hs/tail_recursion.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
sum_rec n acc = do
    if n == 0 then do
        return (acc)

    return (sum_rec n - 1 acc + n)


main :: IO ()
main = do
    print (sum_rec 10 0)
